--- a/app/src/main/res/layout/activity_base.xml
+++ b/app/src/main/res/layout/activity_base.xml
@@ -40,15 +40,17 @@
 
         <TextView
             android:id="@+id/toolbar_title"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/space_50"
+            android:layout_marginEnd="@dimen/space_50"
             android:fontFamily="@font/lato_bold"
-            android:maxLength="24"
             android:maxLines="1"
             android:text="@{vm.title}"
             android:ellipsize="end"
+            android:gravity="center"
             android:textAllCaps="true"
-            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
             android:textColor="@android:color/white"
             android:visibility="@{vm.titleVisibility ? View.VISIBLE : View.GONE}"
             app:layout_constraintBottom_toBottomOf="@+id/mToolBar"
