--- a/app/src/main/res/layout/row_porfolio_calculates_intro.xml
+++ b/app/src/main/res/layout/row_porfolio_calculates_intro.xml
@@ -40,7 +40,7 @@
             android:fontFamily="@font/lato_regular"
             android:minLines="5"
             android:text="@{vm.description}"
-            android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
+            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
