--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -66,7 +66,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/lato_semibold"
-                            android:text="@string/woops"
+                            android:text="Fill up your cart. The sooner you start investing, the more you earn!"
                             android:gravity="center"
                             android:layout_gravity="center"
                             android:layout_marginTop="@dimen/default_space"
