--- a/app/src/main/res/layout/fragment_redeem_confirm.xml
+++ b/app/src/main/res/layout/fragment_redeem_confirm.xml
@@ -107,10 +107,10 @@
 
                 <ImageView
                     android:id="@+id/ivBank"
-                    app:imgUrl="@{bank.bankImgUrl}"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:layout_marginTop="8dp"
+                    app:imgUrl="@{bank.bankImgUrl}"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/tvTitleW"
                     tools:src="@drawable/temp_icici" />
@@ -204,6 +204,7 @@
             </android.support.constraint.ConstraintLayout>
 
             <TextView
+                android:id="@+id/tvDisclaimer"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/default_space"
